fix(): Rolls back layout change from #1227
Fix in 74fe3eb19b097611ed17f2f1459a5682b043387a was too dangerous as a global change, reverting to minimize layout issues.

--- a/src/core/style/layout.scss
+++ b/src/core/style/layout.scss
@@ -86,7 +86,7 @@
   }
 
   [#{$flexName}] {
-    flex: 1 1 0%;
+    flex: 1;
   }
 
 
